<resources>
    <string name="app_name">Spread Your Music</string>
    <string name="app_name_no_spaces">SpreadYourMusic</string>

    <string name="title_activity_home">Inicio</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_artist">ArtistActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Login screen -->
    <string name="or_connect_with">CONECTARSE MEDIANTE</string>
    <string name="signup">Registrarse</string>
    <string name="login">Login</string>
    <string name="password">Contraseña</string>
    <string name="user">Nombre de usuario</string>
    <string name="mail">Correo</string>
    <string name="name">Nombre</string>
    <string name="twitter_account">Cuenta twitter</string>
    <string name="facebook_account">Cuenta facebook</string>
    <string name="instagram_account">Cuenta instagram</string>
    <string name="birth_date">Fecha nacimiento</string>
    <string name="incorrect_user_or_password">Usuario o contraseña incorrecta</string>

    <!-- Upload Song Screen -->

    <string name="newSongName">Nombre de la canción</string>

    <!-- Home screen -->

    <string name="recommendations">Recomendaciones</string>
    <string name="news">Novedades</string>
    <string name="populars">Populares</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="trends">Tendencias</string>
    <string name="action_search">Buscar</string>

    <!-- Recomendaciones -->

    <string name="playlist_updates">Playlists actualizadas</string>
    <string name="new_songs">Canciones nuevas</string>

    <!-- Novedades -->

    <string name="popular_now">Populares ahora</string>
    <string name="popular_in_my_country">Populares en mi país</string>
    <string name="popular_in_the_world">Populares en el mundo</string>

    <!-- Navigation drawer-->

    <string name="browse">Explorar</string>
    <string name="my_library">Mi biblioteca</string>
    <string name="playlist">Playlists</string>
    <string name="artist">Artistas</string>
    <string name="songs">Canciones</string>
    <string name="home">Home</string>
    <string name="genres">Géneros</string>
    <string name="downloaded">Descargadas</string>
    <string name="profile">Perfil</string>
    <string name="open_profile">Ver perfil</string>
    <string name="close_session">Cerrar sesión</string>


    <!-- Notificaiton Channel -->

    <string name="notification_channel">SYM_Channel_ID</string>
    <string name="notification_channel_description">Channel ID for SYM</string>

    <!-- Activity comunication-->

    <string name="user_id">UserId</string>
    <string name="playlist_id">PlaylistId</string>
    <string name="system_list_id">SystemList</string>
    <string name="creator">Creador</string>
    <string name="followers">Seguidores</string>

    <!-- Activity User -->

    <string name="edit">Editar</string>
    <string name="create_playlist">Crear playlist</string>
    <string name="add_song">Añadir canción</string>
    <string name="share">Compartir</string>
    <string name="confirm">Confirmar</string>
    <string name="cancel">Cancelar</string>
    <string name="delete_account">Eliminar cuenta</string>
    <string name="delete_account_dialog">Esta seguro de que desea eliminar la cuenta. Esta acción es irreversible.</string>
    <string name="delete">Eliminar</string>
    <string name="delete_song_dialog">Esta seguro de que desea eliminar la canción. Esta acción es irreversible.</string>
    <string name="delete_playlist_dialog">Esta seguro de que desea eliminar la playlist. Esta acción es irreversible.</string>
    <string name="no_lyrics">Sin letra</string>

    <!-- Upload songs activity -->

    <string name="continuar">Continuar</string>
    <string name="album">Álbum</string>
    <string name="letras">Letras</string>
    <string name="seleccionar">Seleccionar</string>
    <string name="audio">Audio</string>
    <string name="genre">Género</string>
    <string name="new_album_name">Nombre álbum</string>
    <string name="caratula">Caratula</string>
    <string name="create_album">Crear álbum</string>
    <string name="seleccione_fichero">Seleccione un fichero válido</string>
    <string name="guardar">Guardar</string>

    <string name="crear_playlist">Crear Playlist</string>
    <string name="nueva_playlist">Nueva Playlist</string>
    <string name="portada">Portada</string>
    <string name="canciones">Canciones</string>

    <!-- Errores -->

    <string name="error_caratula">"Seleccione una carátula válida"</string>
    <string name="error_nombre_album">"Seleccione un nombre de álbum válido"</string>
    <string name="error_fichero">"Seleccione un fichero válido"</string>
    <string name="error_rellenar">"Rellene todos los campos correctamente"</string>
    <string name="error_nombre_playlist">"Seleccione un nombre de playlist válido"</string>

    <string name="campos_obligatorios_1">Los campos username, password y la foto de usuario son obligatorios</string>
    <string name="campos_obligatorios_2">El campo nombre es obligatorio</string>

    <string name="campos_obligatorios_3">Los campos nombre, álbum, genero y audio son obligatorios </string>
    <string name="campos_obligatorios_4">Los campos caratula y nombre son obligatorios. La playlist ha de poseer al menos un elemento</string>

    <string name="create">Crear</string>


    <string name="album_id">AlbumID</string>
    <string name="album_name">AlbumName</string>

    <string name="upload_song">Subir canción</string>

    <string name="browser">Buscador</string>
    <string name="selected">Seleccionadas</string>

    <string name="update_user">Actualizar usuario</string>
    <string name="update_playlist">Actualizar playlist</string>

    <string name="error">Error</string>

    <string name="update">Actualizar</string>
</resources>
