<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryDark">


    <EditText
        android:id="@+id/newSongName"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/trans_rounded_white"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_music_note_black_24dp"
        android:ems="10"
        android:hint="@string/newSongName"
        android:inputType="textPersonName"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/albumEditText"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/trans_rounded_white"
        android:clickable="true"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_music_note_black_24dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/album"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newSongName" />


    <EditText
        android:id="@+id/generoEditText"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/trans_rounded_white"
        android:clickable="true"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_music_note_black_24dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/genre"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/albumEditText" />


    <EditText
        android:id="@+id/lyricsEditText"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/trans_rounded_white"
        android:clickable="true"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_music_note_black_24dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/letras"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generoEditText" />

    <EditText
        android:id="@+id/audioEditText"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/trans_rounded_white"
        android:clickable="true"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_music_note_black_24dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/audio"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lyricsEditText" />

    <Button
        android:id="@+id/continueButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/rounded_white"
        android:onClick="onContinueClick"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>