<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryDark"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.SignUpActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/createUserButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/realnameEditText"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/trans_rounded_white"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_account_circle_black_24dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/facebookAccountEditText"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/trans_rounded_white"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_facebook"
            android:ems="10"
            android:hint="@string/facebook_account"
            android:inputType="textPersonName"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instagramAccountEditText" />

        <EditText
            android:id="@+id/birthDateEditText"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/trans_rounded_white"
            android:clickable="true"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_cake_black_24dp"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/birth_date"
            android:inputType="date"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/realnameEditText" />

        <EditText
            android:id="@+id/instagramAccountEditText"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/trans_rounded_white"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_instagram"
            android:ems="10"
            android:hint="@string/instagram_account"
            android:inputType="textPersonName"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/twitterAccountEditText" />

        <EditText
            android:id="@+id/twitterAccountEditText"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/trans_rounded_white"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_twitter"
            android:ems="10"
            android:hint="@string/twitter_account"
            android:inputType="textPersonName"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/birthDateEditText" />
    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/createUserButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/rounded_white"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />

</android.support.constraint.ConstraintLayout>