<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".activities.CreateAlbumActivity">

    <TextView
        android:id="@+id/createAlbum"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:drawablePadding="5dp"
        android:ems="10"
        android:gravity="center"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:text="@string/crear_album"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent
" />


        <EditText
            android:id="@+id/newAlbumName"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/trans_rounded_white"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/new_album_name"
            android:inputType="textPersonName"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/createAlbum"
            />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/layout_1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/newAlbumName"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:paddingStart="40dp">

            <TextView
                android:id="@+id/pathCar"
                android:text="@string/caratula"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="@drawable/trans_rounded_white"
                />

            <Button
                android:text="@string/seleccionar"
                android:id="@+id/pathSelector"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

        <Button

            android:id="@+id/continueAlbumButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="104dp"
            android:background="@drawable/rounded_white"
            android:text="@string/continuar"
            android:onClick="onContinueClick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_1"
            />

    </android.support.constraint.ConstraintLayout>